<resources>
    <string name="app_name">Mareu</string>
    <string name="add_reunion">Ajouter une réunion</string>
    <string name="no_filter">Pas de filtre</string>
    <string name="date_filter">Filtrer par date</string>
    <string name="room_filter">Filtrer par lieu</string>
    <string name="hour_filter">Filtrer par heure</string>
    <string name="select_room">Veuillez choisir la salle de réunion:</string>
    <string name="enter_reunion_name">Veuillez écrire le nom de la réunion:</string>
    <string name="enter_reunion_participants">Veuillez écrire les emails des participants:</string>
    <string name="enter_reunion_date">Veuillez sélectionner la date de la réunion:</string>
    <string name="enter_reunion_hour">Veuillez sélectionner l heure de la réunion:</string>
    <string name="enter_reunion_time">Veuillez sélectionner la durée de la réunion:</string>
    <string name="save_this_reunion">Ajouter</string>
    <string name="only_email">Veuillez entrez des adresses email pour les participants svp</string>
    <string name="reunion_not_available">Une réunion existe déjà à cette horaire.</string>

    <string-array name="rooms_array">
        <item>salle 1</item>
        <item>salle 2</item>
        <item>salle 3</item>
        <item>salle 4</item>
        <item>salle 5</item>
        <item>salle 6</item>
        <item>salle 7</item>
        <item>salle 8</item>
        <item>salle 9</item>
        <item>salle 10</item>
    </string-array>

    <string-array name="hour_array">
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>

    <string-array name="minute_array">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <string-array name="time_array">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
    </string-array>

    <string-array name="complet_hour_array">
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
    </string-array>







</resources>