<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reunion_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:listitem="@layout/item_reunion"
        tools:itemCount="5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reunion"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_reunion"
        android:gravity="bottom"
        android:src="@drawable/ic_add_reunion"
        app:backgroundTint="#FD0808" />

</RelativeLayout>


