...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_baseline_brightness_1_24"
         />

    <TextView
        android:id="@+id/item_list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_list_content"
        app:layout_constraintStart_toEndOf="@+id/item_reunion_color"
        app:layout_constraintTop_toTopOf="@+id/item_reunion_color"
        app:layout_constraintEnd_toStartOf="@id/item_reunion_delete_button"
        android:text="blablablabla"
        android:textSize="16sp"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
...
